ynet.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ynet 
  labels: 
    role: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: ynet
  template:
    metadata:
      labels:
        app: ynet
    spec:
      containers: 
      - name: ynet
        image: mohammedig/ynet:latest
        ports:
        - containerPort: 80


---


apiVersion: v1
kind: Service
metadata:
  name: ynet
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: ynet
